# talkbot-architect

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  tailscale-serve.json
.claude/skills/wiz-checker/: .gitignore  SKILL.md  pyproject.toml
.claude/skills/wiz-checker/schema/: dead_end_rules.yaml  fields.md  intent_rules.yaml  open_questions.md  schema_rules.yaml  variable_rules.yaml
.claude/skills/wiz-checker/scripts/: check.py
.claude/skills/wiz-checker/tests/: conftest.py  test_checks_graph.py  test_checks_graph_flowmodel.py  test_checks_intents.py  test_checks_platform.py  test_checks_registry.py  test_checks_schema.py  test_checks_variables.py  test_cli.py  test_component_adapter.py  test_component_checker.py  test_corpus_talk_goto.py  test_flowmodel.py  test_flowmodel_build.py  test_flowmodel_conditional.py  test_flowmodel_exit_types.py  test_flowmodel_kb_detail.py  test_flowmodel_nested.py  test_flowmodel_null_details.py  test_goto_kb.py  test_graph_m4.py  test_graph_m4r2.py  test_hotwords_ir.py  test_integration.py  test_intent_signal_check.py  test_ir.py  test_kb_authoring.py  test_kb_edit_checks.py  test_nodes_5_9.py  test_parser.py  test_report.py  test_summarize_cli.py  test_summarizer.py  test_tags.py
.claude/skills/wiz-facts/: pyproject.toml
.claude/skills/wiz-facts/facts/: _meta.schema.yaml  constraints.yaml  defaults.yaml  enums.yaml  intents.yaml  languages.yaml  vocabulary.yaml
.claude/skills/wiz-facts/scripts/: decode_pdf.py
.claude/skills/wiz-facts/tests/: test_decode.py  test_facts_content.py  test_loader.py
.claude/skills/wiz-modifier/: SKILL.md  pyproject.toml
.claude/skills/wiz-modifier/presets/: import-test-matrix.yaml
.claude/skills/wiz-modifier/schema/: mods.schema.yaml
.claude/skills/wiz-modifier/scripts/: modify.py
.claude/skills/wiz-modifier/tests/: conftest.py  test_append_custom_branch.py  test_append_goto_mr.py  test_append_node.py  test_append_node_import.py  test_append_talk_continue.py  test_apply.py  (+30 more)
(+477 files in other folders)
